--- a/biomede-211-w19.tex
+++ b/biomede-211-w19.tex
@@ -56,7 +56,7 @@ The first assignment I am giving you (worth 4\% of your grade and which must be 
  
 \begin{enumerate}
 	\item Charge is the property of matter that causes it to experience a force when placed in an electromagnetic field; measured in coulombs (C)
-	\item 	
+	\item Found in discrete units (Coulombs)	
 	\item \textbf{How many electrons are needed to form one coulomb?} (What is the weight of all those electrons?) 
 	\item One byte is eight bits. Bits are essentially a single electron stored in a transistor. \textbf{If we were to take all the electrons from one terabyte of well distributed information (equal number of ones and zeros), how many coulombs would we have?}
 \end{enumerate}
